# mbmp-exercises

./: .gitignore  README.md  pyproject.toml
mbmp/12-1/: Makefile  README.md  config.yml  problem.yml  result.pbtxt
mbmp/12-1/outputs/: problem.lp  problem.pbtxt
mbmp/12-1/proto/: config.proto
mbmp/12-1/src/: main.py
mbmp/12-1/src/proto/: config_pb2.py  config_pb2.pyi
